feat: update tool RandomString